@@ -1,238 +1,0 @@
-#############################################################################
-# Makefile for building: cwtrainer
-# Generated by qmake (2.01a) (Qt 4.7.4) on: Sun Jun 10 17:29:03 2012
-# Project:  cwtrainer.pro
-# Template: app
-# Command: /usr/bin/qmake -o Makefile cwtrainer.pro
-#############################################################################
-
-####### Compiler, tools and options
-
-CC            = gcc
-CXX           = g++
-DEFINES       = -DQT_NO_DEBUG -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED
-CFLAGS        = -pipe -Wall -W -D_REENTRANT $(DEFINES)
-CXXFLAGS      = -pipe -Wall -W -D_REENTRANT $(DEFINES)
-INCPATH       = -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtGui -I/usr/include/qt4 -I.
-LINK          = g++
-LFLAGS        = -Wl,-O1 -Wl,-rpath,/usr/lib64/qt4
-LIBS          = $(SUBLIBS)  -L/usr/lib64/qt4 -lQtGui -L/usr/lib64 -L/usr/lib64/qt4 -L/usr/X11R6/lib -lQtCore -lgthread-2.0 -lrt -lglib-2.0 -lpthread 
-AR            = ar cqs
-RANLIB        = 
-QMAKE         = /usr/bin/qmake
-TAR           = tar -cf
-COMPRESS      = gzip -9f
-COPY          = cp -f
-SED           = sed
-COPY_FILE     = $(COPY)
-COPY_DIR      = $(COPY) -r
-STRIP         = strip
-INSTALL_FILE  = install -m 644 -p
-INSTALL_DIR   = $(COPY_DIR)
-INSTALL_PROGRAM = install -m 755 -p
-DEL_FILE      = rm -f
-SYMLINK       = ln -f -s
-DEL_DIR       = rmdir
-MOVE          = mv -f
-CHK_DIR_EXISTS= test -d
-MKDIR         = mkdir -p
-
-####### Output directory
-
-OBJECTS_DIR   = ./
-
-####### Files
-
-SOURCES       = main.cpp \
-		cwsound.cpp \
-		layout.cpp \
-		lcdrange.cpp moc_layout.cpp \
-		moc_lcdrange.cpp
-OBJECTS       = main.o \
-		cwsound.o \
-		layout.o \
-		lcdrange.o \
-		moc_layout.o \
-		moc_lcdrange.o
-DIST          = /usr/share/qt4/mkspecs/common/g++.conf \
-		/usr/share/qt4/mkspecs/common/unix.conf \
-		/usr/share/qt4/mkspecs/common/linux.conf \
-		/usr/share/qt4/mkspecs/qconfig.pri \
-		/usr/share/qt4/mkspecs/modules/qt_webkit_version.pri \
-		/usr/share/qt4/mkspecs/features/qt_functions.prf \
-		/usr/share/qt4/mkspecs/features/qt_config.prf \
-		/usr/share/qt4/mkspecs/features/exclusive_builds.prf \
-		/usr/share/qt4/mkspecs/features/default_pre.prf \
-		/usr/share/qt4/mkspecs/features/release.prf \
-		/usr/share/qt4/mkspecs/features/default_post.prf \
-		/usr/share/qt4/mkspecs/features/warn_on.prf \
-		/usr/share/qt4/mkspecs/features/unix/thread.prf \
-		/usr/share/qt4/mkspecs/features/qt.prf \
-		/usr/share/qt4/mkspecs/features/moc.prf \
-		/usr/share/qt4/mkspecs/features/resources.prf \
-		/usr/share/qt4/mkspecs/features/uic.prf \
-		/usr/share/qt4/mkspecs/features/yacc.prf \
-		/usr/share/qt4/mkspecs/features/lex.prf \
-		/usr/share/qt4/mkspecs/features/include_source_dir.prf \
-		cwtrainer.pro
-QMAKE_TARGET  = cwtrainer
-DESTDIR       = 
-TARGET        = cwtrainer
-
-first: all
-####### Implicit rules
-
-.SUFFIXES: .o .c .cpp .cc .cxx .C
-
-.cpp.o:
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o "$@" "$<"
-
-.cc.o:
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o "$@" "$<"
-
-.cxx.o:
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o "$@" "$<"
-
-.C.o:
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o "$@" "$<"
-
-.c.o:
-	$(CC) -c $(CFLAGS) $(INCPATH) -o "$@" "$<"
-
-####### Build rules
-
-all: Makefile $(TARGET)
-
-$(TARGET):  $(OBJECTS)  
-	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS) $(OBJCOMP) $(LIBS)
-
-Makefile: cwtrainer.pro  /usr/share/qt4/mkspecs/linux-g++/qmake.conf /usr/share/qt4/mkspecs/common/g++.conf \
-		/usr/share/qt4/mkspecs/common/unix.conf \
-		/usr/share/qt4/mkspecs/common/linux.conf \
-		/usr/share/qt4/mkspecs/qconfig.pri \
-		/usr/share/qt4/mkspecs/modules/qt_webkit_version.pri \
-		/usr/share/qt4/mkspecs/features/qt_functions.prf \
-		/usr/share/qt4/mkspecs/features/qt_config.prf \
-		/usr/share/qt4/mkspecs/features/exclusive_builds.prf \
-		/usr/share/qt4/mkspecs/features/default_pre.prf \
-		/usr/share/qt4/mkspecs/features/release.prf \
-		/usr/share/qt4/mkspecs/features/default_post.prf \
-		/usr/share/qt4/mkspecs/features/warn_on.prf \
-		/usr/share/qt4/mkspecs/features/unix/thread.prf \
-		/usr/share/qt4/mkspecs/features/qt.prf \
-		/usr/share/qt4/mkspecs/features/moc.prf \
-		/usr/share/qt4/mkspecs/features/resources.prf \
-		/usr/share/qt4/mkspecs/features/uic.prf \
-		/usr/share/qt4/mkspecs/features/yacc.prf \
-		/usr/share/qt4/mkspecs/features/lex.prf \
-		/usr/share/qt4/mkspecs/features/include_source_dir.prf \
-		/usr/lib64/qt4/libQtGui.prl \
-		/usr/lib64/qt4/libQtCore.prl
-	$(QMAKE) -o Makefile cwtrainer.pro
-/usr/share/qt4/mkspecs/common/g++.conf:
-/usr/share/qt4/mkspecs/common/unix.conf:
-/usr/share/qt4/mkspecs/common/linux.conf:
-/usr/share/qt4/mkspecs/qconfig.pri:
-/usr/share/qt4/mkspecs/modules/qt_webkit_version.pri:
-/usr/share/qt4/mkspecs/features/qt_functions.prf:
-/usr/share/qt4/mkspecs/features/qt_config.prf:
-/usr/share/qt4/mkspecs/features/exclusive_builds.prf:
-/usr/share/qt4/mkspecs/features/default_pre.prf:
-/usr/share/qt4/mkspecs/features/release.prf:
-/usr/share/qt4/mkspecs/features/default_post.prf:
-/usr/share/qt4/mkspecs/features/warn_on.prf:
-/usr/share/qt4/mkspecs/features/unix/thread.prf:
-/usr/share/qt4/mkspecs/features/qt.prf:
-/usr/share/qt4/mkspecs/features/moc.prf:
-/usr/share/qt4/mkspecs/features/resources.prf:
-/usr/share/qt4/mkspecs/features/uic.prf:
-/usr/share/qt4/mkspecs/features/yacc.prf:
-/usr/share/qt4/mkspecs/features/lex.prf:
-/usr/share/qt4/mkspecs/features/include_source_dir.prf:
-/usr/lib64/qt4/libQtGui.prl:
-/usr/lib64/qt4/libQtCore.prl:
-qmake:  FORCE
-	@$(QMAKE) -o Makefile cwtrainer.pro
-
-dist: 
-	@$(CHK_DIR_EXISTS) .tmp/cwtrainer1.0.0 || $(MKDIR) .tmp/cwtrainer1.0.0 
-	$(COPY_FILE) --parents $(SOURCES) $(DIST) .tmp/cwtrainer1.0.0/ && $(COPY_FILE) --parents cwsound.h cwtest.h layout.h lcdrange.h .tmp/cwtrainer1.0.0/ && $(COPY_FILE) --parents main.cpp cwsound.cpp layout.cpp lcdrange.cpp .tmp/cwtrainer1.0.0/ && (cd `dirname .tmp/cwtrainer1.0.0` && $(TAR) cwtrainer1.0.0.tar cwtrainer1.0.0 && $(COMPRESS) cwtrainer1.0.0.tar) && $(MOVE) `dirname .tmp/cwtrainer1.0.0`/cwtrainer1.0.0.tar.gz . && $(DEL_FILE) -r .tmp/cwtrainer1.0.0
-
-
-clean:compiler_clean 
-	-$(DEL_FILE) $(OBJECTS)
-	-$(DEL_FILE) *~ core *.core
-
-
-####### Sub-libraries
-
-distclean: clean
-	-$(DEL_FILE) $(TARGET) 
-	-$(DEL_FILE) Makefile
-
-
-check: first
-
-mocclean: compiler_moc_header_clean compiler_moc_source_clean
-
-mocables: compiler_moc_header_make_all compiler_moc_source_make_all
-
-compiler_moc_header_make_all: moc_layout.cpp moc_lcdrange.cpp
-compiler_moc_header_clean:
-	-$(DEL_FILE) moc_layout.cpp moc_lcdrange.cpp
-moc_layout.cpp: cwsound.h \
-		layout.h
-	/usr/bin/moc $(DEFINES) $(INCPATH) layout.h -o moc_layout.cpp
-
-moc_lcdrange.cpp: lcdrange.h
-	/usr/bin/moc $(DEFINES) $(INCPATH) lcdrange.h -o moc_lcdrange.cpp
-
-compiler_rcc_make_all:
-compiler_rcc_clean:
-compiler_image_collection_make_all: qmake_image_collection.cpp
-compiler_image_collection_clean:
-	-$(DEL_FILE) qmake_image_collection.cpp
-compiler_moc_source_make_all:
-compiler_moc_source_clean:
-compiler_uic_make_all:
-compiler_uic_clean:
-compiler_yacc_decl_make_all:
-compiler_yacc_decl_clean:
-compiler_yacc_impl_make_all:
-compiler_yacc_impl_clean:
-compiler_lex_make_all:
-compiler_lex_clean:
-compiler_clean: compiler_moc_header_clean 
-
-####### Compile
-
-main.o: main.cpp layout.h \
-		cwsound.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o main.cpp
-
-cwsound.o: cwsound.cpp cwsound.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o cwsound.o cwsound.cpp
-
-layout.o: layout.cpp layout.h \
-		cwsound.h \
-		cwtest.h \
-		lcdrange.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o layout.o layout.cpp
-
-lcdrange.o: lcdrange.cpp lcdrange.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o lcdrange.o lcdrange.cpp
-
-moc_layout.o: moc_layout.cpp 
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_layout.o moc_layout.cpp
-
-moc_lcdrange.o: moc_lcdrange.cpp 
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_lcdrange.o moc_lcdrange.cpp
-
-####### Install
-
-install:   FORCE
-
-uninstall:   FORCE
-
-FORCE:
-
